--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,8 @@
     "express": "~4.12.0",
     "jade": "~1.9.2",
     "morgan": "~1.5.1",
+    "passport-facebook": "^2.0.0",
+    "passport-facebook-token": "^0.4.0",
     "serve-favicon": "~2.2.0"
   }
 }
