--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,9 @@
     "debug": "~2.1.1",
     "express": "~4.12.0",
     "jade": "~1.9.2",
+    "mongoose-file": "0.0.2",
     "morgan": "~1.5.1",
+    "multer": "^0.1.8",
     "passport-facebook": "^2.0.0",
     "passport-facebook-token": "^0.4.0",
     "serve-favicon": "~2.2.0"
