--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "debug": "~2.1.1",
     "express": "~4.12.0",
     "jade": "~1.9.2",
+    "mkdirp": "^0.5.0",
     "mongoose-file": "0.0.2",
     "morgan": "~1.5.1",
     "multer": "^0.1.8",
