--- a/server/package.json
+++ b/server/package.json
@@ -6,17 +6,23 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^0.8.1",
     "body-parser": "~1.12.0",
     "cookie-parser": "~1.3.4",
     "debug": "~2.1.1",
     "express": "~4.12.0",
     "jade": "~1.9.2",
+    "jsonwebtoken": "^4.2.1",
     "mkdirp": "^0.5.0",
+    "mongoose": "^3.8.25",
     "mongoose-file": "0.0.2",
     "morgan": "~1.5.1",
     "multer": "^0.1.8",
+    "passport": "^0.2.1",
     "passport-facebook": "^2.0.0",
     "passport-facebook-token": "^0.4.0",
+    "passport-http-bearer": "^1.0.1",
+    "passport-local": "^1.0.0",
     "serve-favicon": "~2.2.0"
   }
 }
