--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "express": "~4.12.0",
     "jade": "~1.9.2",
     "mkdirp": "^0.5.0",
+    "mongoose": "^3.8.25",
     "mongoose-file": "0.0.2",
     "morgan": "~1.5.1",
     "multer": "^0.1.8",
