--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
+
     signingConfigs {
         config {
-            storeFile file('/Users/xiangyixie/Android/key/release_test_key.jks')
-            keyAlias 'release_test'
-            keyPassword '1234qwer'
-            storePassword '1234qwer'
+            keyAlias 'test'
+            keyPassword 'asdfgh'
+            storeFile file('/Users/imlyc/.android/debug.keystore')
+            storePassword 'asdfgh'
         }
     }
     compileSdkVersion 21
@@ -17,13 +18,19 @@ android {
         targetSdkVersion 21
         versionCode 1
         versionName "1.0"
+
         signingConfig signingConfigs.config
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            signingConfig signingConfigs.config
+            //           signingConfig signingConfigs.config
+        }
+        debug {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            //signingConfig signingConfigs.config
         }
     }
     productFlavors {
