--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "bcrypt": "^0.8.1",
+    "bcrypt": "^0.8.3",
+    "bindings": "^1.2.1",
     "body-parser": "~1.12.0",
     "cookie-parser": "~1.3.4",
     "debug": "~2.1.1",
