--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,14 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.xiangyixie.picshouse" >
+    package="com.xiangyixie.picshouse"
+    android:versionCode="1"
+    android:versionName="1.0.0">
 
+
+    <uses-sdk
+        android:minSdkVersion="11"
+        android:maxSdkVersion="19" />
+
+
+    <!--Required permissions-->
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.INTERNET"/>
+
 
     <uses-feature
         android:name="android.hardware.camera"
         android:required="false" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
 
 
     <application
@@ -20,14 +31,10 @@
         <activity
             android:name=".activity.MainActivity"
             android:label="@string/app_name">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
-
         </activity>
 
         <activity
@@ -38,6 +45,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activity.MainActivity" />
         </activity>
+
         <activity
             android:name=".activity.FilterActivity"
             android:label="@string/title_activity_filter"
@@ -46,6 +54,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activity.MainActivity" />
         </activity>
+
         <activity
             android:name=".activity.PublishActivity"
             android:label="@string/title_activity_publish"
@@ -59,16 +68,14 @@
         <activity
             android:name=".register.LoginActivity"
             android:label="@string/title_activity_login" >
-
-
         </activity>
 
         <activity android:name="com.facebook.LoginActivity"
             android:theme="@android:style/Theme.Translucent.NoTitleBar"
             android:label="@string/app_name" />
-
-        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id_test"/>
-
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id_test"/>
     </application>
 
 </manifest>
