--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,7 +43,8 @@ repositories {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:21.0.3'
+    compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.facebook.android:facebook-android-sdk:3.21.1'
+    compile 'com.android.support:design:22.2.0'
     compile project(':volley')
 }
