--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+local.properties
+
 .gradle/*
 .idea/*
 build/*
@@ -5,6 +7,7 @@ app/app-release.apk
 
 facebook/build/*
 volley/build/*
+volley/local.properties
 
 server/.idea/*
 server/node_modules/*
