get action bar back.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,9 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.xiangyixie.picshouse"
     android:versionCode="1"
-    android:versionName="1.0.0"
-
-    >
+    android:versionName="1.0.0">
 
 
     <uses-sdk
@@ -15,12 +13,13 @@
     <!--Required permissions-->
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
 
     <uses-feature
         android:name="android.hardware.camera"
         android:required="false" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
 
     <!--android:theme="@style/AppTheme" -->
 
@@ -35,6 +34,10 @@
             android:label="@string/app_name"
             android:screenOrientation="portrait">
 
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
 
         <activity
@@ -50,6 +53,7 @@
         <activity
             android:name=".activity.FilterActivity"
             android:label="@string/title_activity_filter"
+            android:theme="@style/Theme.AppCompat.Light"
             android:parentActivityName=".activity.MainActivity"
             android:screenOrientation="portrait">
             <meta-data
@@ -72,10 +76,6 @@
             android:name=".register.LoginActivity"
             android:label="@string/title_activity_login"
             android:screenOrientation="portrait">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
 
         <activity android:name="com.facebook.LoginActivity"
