--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,8 +6,8 @@
 
 
     <uses-sdk
-        android:minSdkVersion="11"
-        android:maxSdkVersion="19" />
+        android:minSdkVersion="23"
+        android:maxSdkVersion="23" />
 
 
     <!--Required permissions-->
@@ -38,6 +38,8 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+
         </activity>
 
         <activity
@@ -74,8 +76,9 @@
 
         <activity
             android:name=".register.LoginActivity"
-            android:label="@string/title_activity_login"
+            android:label="@string/app_name"
             android:screenOrientation="portrait">
+
         </activity>
 
         <activity android:name="com.facebook.LoginActivity"
