--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
         config {
             keyAlias 'test'
             keyPassword 'asdfgh'
-            storeFile file('/Users/imlyc/.android/debug.keystore')
+            storeFile file('/Users/xxie/.android/debug.keystore')
             storePassword 'asdfgh'
         }
     }
@@ -35,6 +35,13 @@ android {
     }
     productFlavors {
     }
+
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LICENSE'
+    }
+    useLibrary 'org.apache.http.legacy'
 }
 
 repositories {
@@ -42,10 +49,25 @@ repositories {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.facebook.android:facebook-android-sdk:3.21.1'
     compile 'com.android.support:design:22.2.0'
     compile 'com.facebook.fresco:fresco:0.6.0+'
     compile project(':volley')
+    compile group: 'org.apache.httpcomponents' , name: 'httpclient-android' , version: '4.3.5'
+    compile (group: 'org.apache.httpcomponents' , name: 'httpmime' , version: '4.3.5') {
+        exclude module: 'org.apache.httpcomponents:httpclient'
+    }
+    compile('org.apache.httpcomponents:httpcore:4.4.4') {
+        exclude module: 'httpclient'
+    }
+
+    /*compile('org.apache.httpcomponents:httpmime:4.5.1') {
+        exclude module: 'httpclient'
+    }
+    compile('org.apache.httpcomponents:httpcore:4.4.4') {
+        exclude module: 'httpclient'
+    }
+    compile 'org.apache.httpcomponents:httpclient-android:4.3.5.1'*/
 }
