--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
 
     <uses-feature
@@ -66,9 +67,10 @@
         <activity
             android:name=".activity.PublishActivity"
             android:label="@string/title_activity_publish"
+            android:theme="@style/Theme.AppCompat.Light"
             android:parentActivityName=".activity.FilterActivity"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan" >
+            android:windowSoftInputMode="adjustPan">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.xiangyixie.picshouse.activity.FilterActivity" />
