--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
         }
     }
     compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    buildToolsVersion "23.0.3"
     defaultConfig {
         applicationId "com.xiangyixie.picshouse"
         minSdkVersion 23
@@ -52,9 +52,9 @@ repositories {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.2.0'
+    compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.facebook.android:facebook-android-sdk:3.21.1'
-    compile 'com.android.support:design:22.2.0'
+    compile 'com.android.support:design:23.3.0'
     compile 'com.facebook.fresco:fresco:0.6.0+'
     compile project(':volley')
     compile group: 'org.apache.httpcomponents' , name: 'httpclient-android' , version: '4.3.5'
@@ -65,11 +65,9 @@ dependencies {
         exclude module: 'httpclient'
     }
 
-    /*compile('org.apache.httpcomponents:httpmime:4.5.1') {
-        exclude module: 'httpclient'
-    }
-    compile('org.apache.httpcomponents:httpcore:4.4.4') {
-        exclude module: 'httpclient'
-    }
-    compile 'org.apache.httpcomponents:httpclient-android:4.3.5.1'*/
+    // GCM
+    compile "com.google.android.gms:play-services-gcm:8.4.0"
 }
+
+// Keep in last to avoid conflict
+apply plugin: 'com.google.gms.google-services'
