--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,40 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.xiangyixie.picshouse"
-    android:versionCode="1"
-    android:versionName="1.0.0">
-
+    package="com.xiangyixie.picshouse">
 
     <uses-sdk
-        android:minSdkVersion="15"
-        android:maxSdkVersion="23" />
+        android:maxSdkVersion="23"
+        android:minSdkVersion="15" />
 
-
-    <!--Required permissions-->
+    <!-- Required permissions -->
     <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
+    <permission
+        android:name="com.xiangyixie.picshouse.permission.C2D_MESSAGE"
+        android:protectionLevel="signature" />
+
+    <uses-permission android:name="com.xiangyixie.picshouse.permission.C2D_MESSAGE" />
 
     <uses-feature
         android:name="android.hardware.camera"
         android:required="false" />
 
+    <android:uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
-    <!--android:theme="@style/AppTheme" -->
-
+    <!-- android:theme="@style/AppTheme" -->
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
-
+        android:theme="@style/AppTheme">
         <activity
             android:name=".activity.MainActivity"
-            android:label="@string/app_name">
-        </activity>
-
+            android:label="@string/app_name" />
         <activity
             android:name=".activity.CameraActivity"
             android:label="@string/title_activity_camera"
@@ -43,46 +42,72 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activity.MainActivity" />
         </activity>
-
         <activity
             android:name=".activity.FilterActivity"
             android:label="@string/title_activity_filter"
-            android:theme="@style/Theme.AppCompat.Light"
             android:parentActivityName=".activity.MainActivity"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activity.MainActivity" />
         </activity>
-
         <activity
             android:name=".activity.PublishActivity"
             android:label="@string/title_activity_publish"
-            android:theme="@style/Theme.AppCompat.Light"
             android:parentActivityName=".activity.FilterActivity"
+            android:theme="@style/Theme.AppCompat.Light"
             android:windowSoftInputMode="adjustPan">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.xiangyixie.picshouse.activity.FilterActivity" />
         </activity>
-
         <activity
             android:name=".register.LoginActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="com.facebook.LoginActivity"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
 
-        <activity android:name="com.facebook.LoginActivity"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar"
-            android:label="@string/app_name">
-        </activity>
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
-            android:value="@string/facebook_app_id_test"/>
+            android:value="@string/facebook_app_id_test" />
 
+        <receiver
+            android:name="com.google.android.gms.gcm.GcmReceiver"
+            android:exported="true"
+            android:permission="com.google.android.c2dm.permission.SEND">
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+
+                <category android:name="com.xiangyixie.picshouse" />
+            </intent-filter>
+        </receiver>
+
+        <service
+            android:name=".service.NotificationListenerService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+            </intent-filter>
+        </service>
+        <service
+            android:name="service.NotificationInstanceIDListenerService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.android.gms.iid.InstanceID" />
+            </intent-filter>
+        </service>
+        <service
+            android:name=".service.NotificationRegistrationService"
+            android:exported="false"></service>
     </application>
 
 </manifest>
