--- a/volley/build.gradle
+++ b/volley/build.gradle
@@ -10,7 +10,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.0-rc1'
+        classpath 'com.android.tools.build:gradle:2.1.0'
     }
 }
 apply plugin: 'com.android.library'
@@ -21,4 +21,5 @@ android {
 apply from: 'rules.gradle'
 
 dependencies {
+
 }
